--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
-<title>Short Project</title>
+<title>Web developer</title>
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/media.css" />
 
