--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	<div class="container">
 		<div class="box-container">
 			<div class="image">
-				<img src="img/shart.png" />
-			<span>20% OFF</span>
-			<span>NEW </span>
+				<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAg-AAAAJDU0ZjhiYmQ5LWMyZTYtNDE5ZS1hNWIxLWY2YWQ4MTM4MzY4Nw.jpg" />
+				<span><a href="#"> Youtube </a></span>
+			<span>Facebook</span>
 			</div>
 			<div class="description">
 			<h2> T-Shirt</h2>
