--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 		<div class="box-container">
 			<div class="image">
 				<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAg-AAAAJDU0ZjhiYmQ5LWMyZTYtNDE5ZS1hNWIxLWY2YWQ4MTM4MzY4Nw.jpg" />
-				<span><a href="#"> Youtube </a></span>
-			<span>Facebook</span>
+				<span> Twitter </span>
+			<span> Facebook </span>
 			</div>
 			<div class="description">
-			<h2> T-Shirt</h2>
-			<p>New Collection</p>
+			<h2> Sohag Ahmmed</h2>
+			<p>Web developer</p>
 			</div>
 		</div>
 	</div>
