--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
 <nav>
 <ul>
 <li> <a href="">Facebook</a></li>
-<li> <a href="">Service </a></li>
-<li> <a href="">Gallery </a></li>
-<li class="dropdown"> <a href="">Product</a>
+<li> <a href="">Twitter </a></li>
+<li> <a href="">Youtube </a></li>
+<li class="dropdown"> <a href="">Slideshare</a>
 
-	<ul>
-		<li> <a href="">School Management</a></li>
-		<li> <a href="">ERP SOftware</a></li>
-		<li> <a href="">Banking Management</a></li>
-	</ul>
+	
 </li>
-<li> <a href="">About Us </a></li>
-<li> <a href="">Contact</a></li>
+<li> <a href="">Linkedin </a></li>
+<li> <a href="">Pinterest</a></li>
 
 </ul>
 
@@ -48,13 +44,13 @@
 	<div class="container">
 		<div class="box-container">
 			<div class="image">
-				<img src="img/shart.png" />
-			<span>20% OFF</span>
-			<span>NEW </span>
+				<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAg-AAAAJDU0ZjhiYmQ5LWMyZTYtNDE5ZS1hNWIxLWY2YWQ4MTM4MzY4Nw.jpg" />
+				<span> Twitter </span>
+			<span> Facebook </span>
 			</div>
 			<div class="description">
-			<h2> T-Shirt</h2>
-			<p>New Collection</p>
+			<h2> Sohag Ahmmed</h2>
+			<p>Web developer</p>
 			</div>
 		</div>
 	</div>
@@ -62,13 +58,13 @@
 	<div class="container">
 		<div class="box-container">
 			<div class="image">
-				<img src="img/shart.png" />
-			<span>20% OFF</span>
-			<span>NEW </span>
+				<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAg-AAAAJDU0ZjhiYmQ5LWMyZTYtNDE5ZS1hNWIxLWY2YWQ4MTM4MzY4Nw.jpg" />
+				<span> Twitter </span>
+			<span> Facebook </span>
 			</div>
 			<div class="description">
-			<h2> T-Shirt</h2>
-			<p>New Collection</p>
+			<h2> Sohag Ahmmed</h2>
+			<p>Web developer</p>
 			</div>
 		</div>
 	</div>
@@ -77,13 +73,13 @@
 	<div class="container">
 		<div class="box-container">
 			<div class="image">
-				<img src="img/shart.png" />
-			<span>20% OFF</span>
-			<span>NEW </span>
+				<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAg-AAAAJDU0ZjhiYmQ5LWMyZTYtNDE5ZS1hNWIxLWY2YWQ4MTM4MzY4Nw.jpg" />
+				<span> Twitter </span>
+			<span> Facebook </span>
 			</div>
 			<div class="description">
-			<h2> T-Shirt</h2>
-			<p>New Collection</p>
+			<h2> Sohag Ahmmed</h2>
+			<p>Web developer</p>
 			</div>
 		</div>
 	</div>
