--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="container">
 		<div class="box-container">
 			<div class="image">
-				<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAg-AAAAJDU0ZjhiYmQ5LWMyZTYtNDE5ZS1hNWIxLWY2YWQ4MTM4MzY4Nw.jpg" />
+				<img src="https://lh3.googleusercontent.com/-B6jFFKF38ZE/WKX_VdjqjvI/AAAAAAAAAp4/ES3cNCSuWe8nSFjUN6uN2hQcj6ykHnrKQCL0B/w692-h389-n-no/DSC_0157.jpg" />
 				<span> Twitter </span>
 			<span> Facebook </span>
 			</div>
