--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 	<div class="container">
 		<div class="box-container">
 			<div class="image">
-				<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAg-AAAAJDU0ZjhiYmQ5LWMyZTYtNDE5ZS1hNWIxLWY2YWQ4MTM4MzY4Nw.jpg" />
+				<img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-9/10380980_1101294503219214_5552399625348346183_n.jpg?oh=fc6511d11c9ebd7096fdff11b66bea3e&amp;oe=5956B7FA" />
 				<span> Twitter </span>
 			<span> Facebook </span>
 			</div>
 			<div class="description">
-			<h2> Sohag Ahmmed</h2>
-			<p>Web developer</p>
+			<h2> Shohel Rana</h2>
+			<p>SME Business Loan Department at Bank Asia Limited</p>
 			</div>
 		</div>
 	</div>
