--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 	<div class="container">
 		<div class="box-container">
 			<div class="image">
-				<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAg-AAAAJDU0ZjhiYmQ5LWMyZTYtNDE5ZS1hNWIxLWY2YWQ4MTM4MzY4Nw.jpg" />
+				<img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-9/11666081_1155855934429737_3609644616193692702_n.jpg?oh=4c71e2631987c6ea8d9eeda94ca75e83&amp;oe=59592793" />
 				<span> Twitter </span>
 			<span> Facebook </span>
 			</div>
 			<div class="description">
-			<h2> Sohag Ahmmed</h2>
-			<p>Web developer</p>
+			<h2> Shohel Rana</h2>
+			<p>SME Business Loan Department at Bank Asia Limited</p>
 			</div>
 		</div>
 	</div>
