--- a/index.html
+++ b/index.html
@@ -83,6 +83,34 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="container">
+		<div class="box-container">
+			<div class="image">
+				<img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-9/10380980_1101294503219214_5552399625348346183_n.jpg?oh=fc6511d11c9ebd7096fdff11b66bea3e&amp;oe=5956B7FA" />
+				<span> Twitter </span>
+			<span> Facebook </span>
+			</div>
+			<div class="description">
+			<h2> Shohel Rana</h2>
+			<p>SME Business Loan Department at Bank Asia Limited</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class="container">
+		<div class="box-container">
+			<div class="image">
+				<img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-9/10380980_1101294503219214_5552399625348346183_n.jpg?oh=fc6511d11c9ebd7096fdff11b66bea3e&amp;oe=5956B7FA" />
+				<span> Twitter </span>
+			<span> Facebook </span>
+			</div>
+			<div class="description">
+			<h2> Shohel Rana</h2>
+			<p>SME Business Loan Department at Bank Asia Limited</p>
+			</div>
+		</div>
+	</div>
 
 </body>
 
