--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			<span> Facebook </span>
 			</div>
 			<div class="description">
-			<h2> Shohel Rana</h2>
-			<p>SME Business Loan Department at Bank Asia Limited</p>
+			<h2> Sohag Ahmmed</h2>
+			<p>Web developer</p>
 			</div>
 		</div>
 	</div>
