--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				
 				 <a href="https://www.w3.org" target="_blank">w3.org</a> <br />
 				 <a href="https://www.w3schools.com/" target="_blank">w3schools.com</a> <br />
-				 <a href="http://ianlunn.github.io/Hover/" target="_blank">Hover CSS</a>  <br />
+				 <a href="http://ianlunn.github.io/Hover/" target="_blank">Hover. CSS</a>  <br />
 				 <a href="https://onlinefontconverter.com/" target="_blank">onlinefontconverter.com</a>  <br />
 				  <a href="http://www.colorzilla.com/" target="_blank">colorzilla.com</a> <br />
 				  <a href="http://www.dofactory.com/sql/tutorial" target="_blank">dofactory.com/sql/tutorial</a> <br />
@@ -60,11 +60,11 @@
 		<a href="http://caniuse.com/" target="_blank">caniuse.com</a> <br />
 		<a href="https://github.com/" target="_blank">github.com</a>  <br />
 		<a href="http://getbootstrap.com/" target="_blank">getbootstrap.com</a>  <br />
-		<a href="http://www.lipsum.com/" target="_blank">lipsum.com</a>  <br />
-		
+		<a href="http://www.lipsum.com/" target="_blank">Lorem Ipsum</a>  <br />
+		<a href="http://www.free-css.com/" target="_blank">Free-css</a>  <br />
 		<a href="https://sourceforge.net/" target="_blank">sourceforge.net</a>  <br />
-		
-		
+		<a href="http://codepen.io/#" target="_blank">codepen</a>  <br />
+		<a href="http://stackoverflow.com/" target="_blank">http://stackoverflow.com/</a>  <br />
 		<a href="https://fonts.google.com/" target="_blank">fonts.google.com</a>  <br />
 		<a href="https://fonts.google.com/" target="_blank">fonts.google.com</a>  <br />
 		<a href="http://www.fonts2u.com/solaimanlipi.font" target="_blank">Bangla font solaimanlipi</a>  <br />
