--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<a href="https://www.facebook.com" target="_blank">facebook.com</a>  <br />
 	<a href="https://twitter.com/" target="_blank">twitter.com</a>  <br />
 	<a href="https://www.pinterest.com" target="_blank">pinterest.com</a>  <br />
-	
+	<a href="https://mail.google.com" target="_blank">gmail</a>  <br />
 	 
 	 <a href="https://www.youtube.com" target="_blank">youtube.com</a> <br />
 	 <a href="https://www.linkedin.com" target="_blank">linkedin.com</a> <br />
