--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 				 <a href="https://onlinefontconverter.com/" target="_blank">onlinefontconverter.com</a>  <br />
 				  <a href="http://www.colorzilla.com/" target="_blank">colorzilla.com</a> <br />
 				  <a href="http://www.dofactory.com/sql/tutorial" target="_blank">dofactory.com/sql/tutorial</a> <br />
-			
+			<a href="http://codepen.io/#" target="_blank">codepen</a>  <br />
+		<a href="http://stackoverflow.com/" target="_blank">stackoverflow.com</a>  <br />
 			<a href="http://www.cssmatic.com/" target="_blank">cssmatic.com</a> <br />
 			
 	</div>
@@ -63,8 +64,7 @@
 		<a href="http://www.lipsum.com/" target="_blank">Lorem Ipsum</a>  <br />
 		<a href="http://www.free-css.com/" target="_blank">Free-css</a>  <br />
 		<a href="https://sourceforge.net/" target="_blank">sourceforge.net</a>  <br />
-		<a href="http://codepen.io/#" target="_blank">codepen</a>  <br />
-		<a href="http://stackoverflow.com/" target="_blank">http://stackoverflow.com/</a>  <br />
+		
 		<a href="https://fonts.google.com/" target="_blank">fonts.google.com</a>  <br />
 		<a href="https://fonts.google.com/" target="_blank">fonts.google.com</a>  <br />
 		<a href="http://www.fonts2u.com/solaimanlipi.font" target="_blank">Bangla font solaimanlipi</a>  <br />
