--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 		<a href="http://www.lipsum.com/" target="_blank">Lorem Ipsum</a>  <br />
 		<a href="http://www.free-css.com/" target="_blank">Free-css</a>  <br />
 		<a href="https://sourceforge.net/" target="_blank">sourceforge.net</a>  <br />
-		
+		<a href="http://www.ampps.com/" target="_blank">ampps</a>  <br />
+		<a href="http://www.writephponline.com/" target="_blank">writephponline</a>  <br />
 		<a href="https://fonts.google.com/" target="_blank">fonts.google.com</a>  <br />
 		<a href="https://fonts.google.com/" target="_blank">fonts.google.com</a>  <br />
 		<a href="http://www.fonts2u.com/solaimanlipi.font" target="_blank">Bangla font solaimanlipi</a>  <br />
