--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="container">
 		<div class="box-container">
 			<div class="image">
-				<img src="https://lh3.googleusercontent.com/-B6jFFKF38ZE/WKX_VdjqjvI/AAAAAAAAAp4/ES3cNCSuWe8nSFjUN6uN2hQcj6ykHnrKQCL0B/w692-h389-n-no/DSC_0157.jpg" />
+<img src="img/DSC_0157.jpg" />
 				<span> Twitter </span>
 			<span> Facebook </span>
 			</div>
